@@ -1,7 +1,20 @@
 package Image::Magick;
 
-# Released Feb. 17, 1997  by Kyle Shorter (magick@wizards.dupont.com)
-# Public Domain
+#  Copyright 1999-2011 ImageMagick Studio LLC, a non-profit organization
+#  dedicated to making software imaging solutions freely available.
+#
+#  You may not use this file except in compliance with the License.  You may
+#  obtain a copy of the License at
+#
+#    http://www.imagemagick.org/script/license.php
+#
+#  Unless required by applicable law or agreed to in writing, software
+#  distributed under the License is distributed on an "AS IS" BASIS,
+#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#  See the License for the specific language governing permissions and
+#  limitations under the License.
+#
+#  Initial version, written by Kyle Shorter.
 
 use strict;
 use Carp;
