@@ -463,6 +463,28 @@ fi
 AC_SUBST(LFS_CPPFLAGS)
 
 #
+# ARCH specific include directory
+#
+AC_ARG_WITH([includedir-arch],
+    [AC_HELP_STRING([--includedir-arch=DIR],
+                    [ARCH specific include directory])],
+                    [includedir_arch=$withval],
+                    [includedir_arch=$INCLUDE_DIR])
+
+AC_DEFINE_UNQUOTED(INCLUDEDIR_ARCH,"$includedir_arch",[ARCH specific include directory])
+
+#
+# ARCH specific configuration directory
+#
+AC_ARG_WITH([configdir-arch],
+    [AC_HELP_STRING([--configdir-arch=DIR],
+                    [ARCH specific config directory])],
+                    [configdir_arch=$withval],
+                    [configdir_arch="${LIB_DIR}/${PACKAGE_NAME}-${PACKAGE_VERSION}"])
+
+AC_DEFINE_UNQUOTED(CONFIGDIR_ARCH,"$configdir_arch",[ARCH specific config directory])
+
+#
 # Configure libtool & libltdl
 #
 # Configure libtool
@@ -2725,7 +2747,7 @@ dnl ===========================================================================
 #
 # Set Windows font directory.
 #
-AC_ARG_WITH(windows-font-dir,
+AC_ARG_WITH([windows-font-dir],
     [AC_HELP_STRING([--with-windows-font-dir=DIR],
                     [directory containing MS-Windows fonts])],
                     [with_windows_font_dir=$withval],
